--- a/HTMLParser.csproj
+++ b/HTMLParser.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\JType\JTypes.csproj" />
+  </ItemGroup>
+
 </Project>
